<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/design_default_color_secondary"
        android:text="@string/login"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_secondary"
        android:text="@string/register"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/username"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:hint="@string/passwordHint"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgotPassword"
        android:textSize="16sp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/toolbar_login"
            layout="@layout/toolbar"
            app:layout_scrollFlags="scroll|enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>

